<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:background="@color/activity"
    tools:context="com.intellif.eyecloud.setting.SettingActivity">
    <com.intellif.eyecloud.utils.TitleLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.intellif.eyecloud.utils.TitleLayout>
    <RelativeLayout
        android:id="@+id/rl_setting_alerts"
        android:background="@drawable/item_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/setting_message"
            android:padding="@dimen/padd10"
            android:textSize="@dimen/content_size15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/back0"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <RelativeLayout
        android:id="@+id/rl_setting_clear"
        android:background="@drawable/item_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/setting_cache"
            android:padding="@dimen/padd10"
            android:textSize="@dimen/content_size15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/back0"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <RelativeLayout
        android:id="@+id/rl_setting_question"
        android:layout_marginTop="@dimen/padd20"
        android:background="@drawable/item_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/setting_question"
            android:padding="@dimen/padd10"
            android:textSize="@dimen/content_size15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/back0"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <RelativeLayout
        android:id="@+id/rl_setting_about"
        android:background="@drawable/item_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/setting_about"
            android:padding="@dimen/padd10"
            android:textSize="@dimen/content_size15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/back0"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <RelativeLayout
        android:id="@+id/rl_setting_exit"
        android:layout_marginTop="@dimen/padd20"
        android:background="@drawable/item_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerInParent="true"
            android:textColor="@color/red2"
            android:text="@string/tuichu"
            android:padding="@dimen/padd10"
            android:textSize="@dimen/content_size15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/back0"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

</LinearLayout>
