<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:background="@color/back0"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height60">
        <LinearLayout
            android:id="@+id/bottom_message"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/bottom_img_message"
                android:src="@mipmap/message_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/bottom_tv_message"
                android:layout_marginTop="@dimen/height2"
                android:text="@string/message"
                android:textSize="@dimen/size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottom_record"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/bottom_img_record"
                android:src="@mipmap/record_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/bottom_tv_record"
                android:layout_marginTop="@dimen/height2"
                android:text="@string/record"
                android:textSize="@dimen/size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottom_function"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/bottom_img_function"
                android:src="@mipmap/function_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/bottom_tv_function"
                android:layout_marginTop="@dimen/height2"
                android:text="@string/function"
                android:textSize="@dimen/size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottom_person"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/bottom_img_person"
                android:src="@mipmap/person_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/bottom_tv_person"
                android:layout_marginTop="@dimen/height2"
                android:text="@string/my"
                android:textSize="@dimen/size12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>